applications/openbuildservice/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: openbuildservice-ingress
spec:
  tls:
    - hosts:
        - build.openeuler.org
      secretName: jenkins-tls
  rules:
    - host: build.openeuler.org
      http:
        paths:
          - backend:
              serviceName: ssh-tunnel
              servicePort: 1082
            path: /
